# devskin

./: README.md  pyproject.toml
src/devskin/: cli.py  models.py  patch_starship.py
src/devskin/presets/: sfc-modern.yaml
tests/: test_cli.py  test_patch_starship.py
tests/fixtures/: starship.sample.toml
