[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devskin"
version = "0.1.0"
description = "Apply modern-retro presets to developer tools with minimal, reversible patches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
devskin = "devskin.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
devskin = ["presets/*.yaml"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
